# GradeScope_CPP_Autograder

./: Presentation.pptx  README.md  SeniorThesisFinalDraft.docx  bootstrap.py  config.yml  grade_util.py  requirements.txt  run_autograder  setup.sh
tests/testSetA/: ExampleTests.cpp  parent-CMakeLists.txt  test.yml
tests/testSetB/: CMakeLists.txt  ExampleTests.cpp  test.yml
tests/testSetC/: run_test  src-CMakeLists.txt  test.yml
